# AudioSnip

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: apps.rs  commands.rs  hotkey.rs  lib.rs  main.rs  settings_store.rs  state.rs  tray.rs
src-tauri/src/audio/: encoder.rs  mixer.rs  mod.rs  ring_buffer.rs
src-tauri/src/audio/capture/: mod.rs  process_loopback.rs  wasapi.rs
src/components/: AccordionSection.tsx  AddAppSourcesButton.tsx  AddApplicationDialog.tsx  ApplicationSourceGroup.tsx  AudioOptionsPanel.tsx  ChannelList.tsx  CollapsibleSidebar.tsx  CompactVolumeControl.tsx  ConfirmDialog.tsx  InfoTooltip.tsx  LoadingOverlay.tsx  PlaybackTimer.tsx  ScrubControl.tsx  SecondsField.tsx  Settings.tsx  TrackEditor.tsx  VolumeFader.tsx  Waveform.tsx
src/hooks/: useHotkeyListener.ts  useTrackPeaksCache.ts
src/lib/: audioMixMath.ts  audioPreview.ts  commands.ts  dbConversion.ts  decimalMask.ts  hotkeyRecorder.ts  icons.ts  mixerWorkerClient.ts
src/types/: audio.ts
src/workers/: mixer.worker.ts
