[package]
name = "audiosnip"
version = "0.1.2"
description = "AudioSnip - Multi-Channel Audio Clipper"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audiosnip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.2"
cpal = "0.18.1"
mp3lame-encoder = "0.2.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
# Pinned to match whatever version `windows` resolves to internally - the
# `#[windows::core::implement]` macro (used by `process_loopback.rs` to
# implement a COM callback interface) expands to code referencing
# `windows_core::` paths directly, which only resolves if `windows-core` is
# also a direct dependency of this crate at the exact same version (avoiding
# a duplicate-version trait-bound mismatch if some other dependency in the
# graph pulls in a different `windows-core`).
windows-core = "=0.61.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
]

